--- a/search_api_glossary.info.yml
+++ b/search_api_glossary.info.yml
@@ -3,6 +3,7 @@ description: 'Creates a glossary fields (A B C ...) based on node titles and use
 core: 8.x
 package: Search
 type: module
+core_version_requirement: ^8 || ^9
 dependencies:
   - search_api:search_api
   - facets:facets
